tenzir/bats/data/reference/every/test_every_with_multiple_operators/step_01.ref
error: pipeline contains both remote and local operators
 --> /dev/stdin:1:1
  |
1 | every 10ms {
  | ^^^^^ 
  |
  = note: this limitation will be lifted soon